Fix issue with settings page, truncate table data on overflow

--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -6,3 +6,10 @@
   border-left: 5px solid var(--v-secondary-base);
   border-bottom: 5px solid var(--v-secondary-base);
 }
+
+.truncate {
+  max-width: 1px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
